--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'kotlin-android-extensions'
-// TODO-01-INTEGRAR
 apply plugin: 'com.google.gms.google-services'
-// TODO-02-CRASHLYTICS
 apply plugin: 'com.google.firebase.crashlytics'
 
 android {
@@ -33,13 +31,16 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    // TODO-01-INTEGRAR
     // Agregar dependencias de Firebase en esta seccion
     implementation platform('com.google.firebase:firebase-bom:28.2.1')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-crashlytics'
     implementation 'com.google.firebase:firebase-config-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
+    implementation 'com.google.firebase:firebase-database:20.0.0'
+    implementation 'com.google.firebase:firebase-appcheck-debug:16.0.0-beta02'
+
+
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
 }
